# elfeat

./: .gitignore  Cargo.toml
.cargo/: config
example_bin/: .gdb_history  main  main.c  static
example_bin/archives/: text_file.txt
src/: file.rs  lib.rs  main.rs  type_macro.rs  types.rs
src/types/: ;  common_type_wrap.rs  composition.rs  elf.rs  model.rs  primitive.rs  repr_u8.rs  zip.rs
src/types/model/: macros.rs
