[package]
name = "elfeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
serde = {version = "*", features = ["derive"]}
libc = "*"
ref-cast = "1.0.8"
memoffset = "0.6.5"
paste = "1.0.7"
