[package]
name = "elfeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = 'fat'
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
array-macro = "2.1.5"
paste = "1.0.8"
zydis = "3.0"
